# integrations

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_integrations.py  0002_downstream_source_id.py  0003_provider_credentials.py
app/: crypto.py  db.py  documents_client.py  main.py  models.py  polling.py  repositories.py  sync_service.py  worker.py  yandex.py
integrations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_persistence.py  test_connections.py  test_credentials.py  test_documents_client.py  test_health.py  test_integrations.py  test_persistence.py  test_polling_worker.py  test_sync_jobs.py  test_sync_service.py  test_yandex.py
